Updated Welsh translation.
2005-05-26  Rhys Jones  <rhys@sucs.org>

	* cy.po: Updated Welsh translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-26  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2005-05-24  Adi Attar  <aattar@cvs.gnome.org>
 
 	* xh.po: Updated Xhosa translation.
