Updated Simplified Chinese translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-27  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2005-05-26  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Merged minor updates from gnome-2-10 branch.
