--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-05-27  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c:
+	(fm_directory_view_handle_url_drop):
+	Better handling of default action for mozilla dnd drops.
+
+	Patch from Dave Ahlswede
+
 2005-05-27  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/nautilus-navigation-action.c: (set_tooltip_callback),
