--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-05-27  Martin Wehner  <martin.wehner@gmail.com>
 
+	* libnautilus-private/nautilus-thumbnails.c:
+	(thumbnail_thread_start):
+	Don't try to thumbnail files which have been modified in the
+	last few seconds to avoid constantly re-thumbnailing them.
+	Current cool-off period is three seconds. Fixes bug #107418.
+
+2005-05-27  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/file-manager/fm-directory-view.[ch]:
 	(display_pending_files), (fm_directory_view_freeze_updates),
 	(fm_directory_view_unfreeze_updates), (queue_pending_files):
