--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-05-27  Christian Neumair  <chris@gnome-de.org>
 
+	* src/file-manager/fm-directory-view.c: (real_update_menus):
+	Don't display "Properties" background context menu item for Desktop.
+
+2005-05-27  Christian Neumair  <chris@gnome-de.org>
+
 	* src/nautilus-location-dialog.c: (nautilus_location_dialog_new):
 	Only set dialog transient if a parent window was specified.
 	Fixes #142814.
