--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-29  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2005-05-26  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh translation.
