--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-30  Ankit Patel <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 2005-05-29  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
