--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-31  Terance Sola  <terance@lyse.net>
+
+	* nb.po: Updated
+	* no.po: Updated
+
 2005-05-29  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
