--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-02  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated Nepali Translation
+
 2005-06-01  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
