added extensiondir variable so that extensions can find out via pkg-config
2005-06-02  Rodrigo Moya <rodrigo@novell.com>

	* libnautilus-extension/libnautilus-extension.pc.in: added
	extensiondir variable so that extensions can find out via pkg-config
	the dir to install to.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-02  Rodrigo Moya <rodrigo@novell.com>
+
+	* libnautilus-extension/libnautilus-extension.pc.in: added
+	extensiondir variable so that extensions can find out via pkg-config
+	the dir to install to.
+
 2005-06-02  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-icon-container.c:
