--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-06-02  Sebastien Bacher  <seb128@debian.org>
+
+	* libnautilus-private/nautilus-emblem-utils.c:
+	(nautilus_emblem_install_custom_emblem),
+	(nautilus_emblem_can_remove_emblem),
+	(nautilus_emblem_can_rename_emblem),
+	(nautilus_emblem_remove_emblem), (nautilus_emblem_rename_emblem):
+	use "hicolor" instead of "gnome" for emblems (Closes: #164629).
+
 2005-06-02  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-directory-view.c: (real_action_rename):
