Remove libbackground/applier.c from POTFILES.in.
2005-06-03  Christian Neumair  <chris@gnome-de.org>

	* POTFILES.in:
	* POTFILES.skip:
	Remove libbackground/applier.c from POTFILES.in.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-03  Christian Neumair  <chris@gnome-de.org>
+
+	* POTFILES.in:
+	* POTFILES.skip:
+	Remove libbackground/applier.c from POTFILES.in.
+
 2005-06-02  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Updated Nepali Translation
