Fix "Zoom In Accel" action.
2005-06-03  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-shell-ui.xml: Fix "Zoom In Accel" action.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-06-03  Christian Neumair  <chris@gnome-de.org>
 
+	* src/nautilus-shell-ui.xml: Fix "Zoom In Accel" action.
+
+2005-06-03  Christian Neumair  <chris@gnome-de.org>
+
 	* libnautilus-extension/nautilus-column.c:
 	(nautilus_column_class_init):
 	* libnautilus-extension/nautilus-menu-item.c:
