--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-06-04  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-directory-view.c:
+	* src/nautilus-shell-ui.xml:
+	* src/nautilus-window-menus.c:
+	Fix critical warnings from the new accelerators
+	by adding dummy labels.
+	
 2005-06-03  Christian Neumair  <chris@gnome-de.org>
 
 	* src/nautilus-shell-ui.xml: Fix "Zoom In Accel" action.
