--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-04  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-clipboard.c:
+	(nautilus_clipboard_real_set_up):
+	Don't setup clipboard twice for the same editing widget.
+
 2005-06-04  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-window-manage-views.c: (load_new_location),
