--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-06  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2005-06-05  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
