--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-06  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by  Sven Sapelson.
+
 2005-06-02  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by  Sven Sapelson.
