Reveal icon when selecting it. Fixes #121111.
2005-06-06  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/nautilus-icon-container.c:
	(select_one_unselect_others):
	Reveal icon when selecting it. Fixes #121111.

	Based on a patch from Christian Neumair <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-06-06  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-icon-container.c:
+	(select_one_unselect_others):
+	Reveal icon when selecting it. Fixes #121111.
+	
+	Based on a patch from Christian Neumair <chris@gnome-de.org>
+
 2005-06-04  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-clipboard.c:
