--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician translation.
+
 2005-06-06  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by  Sven Sapelson.
