Updated Spanish translation.
2005-06-07  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-06-05 14:45+0200\n"
-"PO-Revision-Date: 2005-06-05 14:52+0200\n"
+"POT-Creation-Date: 2005-06-07 21:05+0200\n"
+"PO-Revision-Date: 2005-06-07 21:06+0200\n"
 "Last-Translator: \n"
 "Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -1132,7 +1132,7 @@ msgid "Move _Up"
 msgstr "_Subir"
 
 #: ../libnautilus-private/nautilus-column-chooser.c:404
-msgid "Move _Down"
+msgid "Move Dow_n"
 msgstr "_Bajar"
 
 #: ../libnautilus-private/nautilus-column-chooser.c:413
@@ -1141,12 +1141,12 @@ msgstr "_Mostrar"
 
 # src/nautilus-first-time-druid.c:290
 #: ../libnautilus-private/nautilus-column-chooser.c:423
-msgid "_Hide"
+msgid "Hi_de"
 msgstr "_Ocultar"
 
 # src/nautilus-sidebar.c:424
 #: ../libnautilus-private/nautilus-column-chooser.c:436
-msgid "_Use Default"
+msgid "Use De_fault"
 msgstr "U_sar el predeterminado"
 
 # #-#-#-#-#  nautilus-es.po (Nautilus)  #-#-#-#-#
@@ -2631,7 +2631,7 @@ msgstr "24"
 msgid "%s's Home"
 msgstr "Carpeta personal de %s"
 
-#: ../libnautilus-private/nautilus-icon-container.c:2107
+#: ../libnautilus-private/nautilus-icon-container.c:2110
 msgid "The selection rectangle"
 msgstr "El rectángulo de selección"
 
@@ -3431,15 +3431,18 @@ msgid "The %d selected item will be moved if you select the Paste command"
 msgid_plural ""
 "The %d selected items will be moved if you select the Paste command"
 msgstr[0] "El elemento seleccionado se moverá si selecciona el comando «Pegar»"
-msgstr[1] "Los %d elementos seleccionados se moverán si selecciona el comando «Pegar»"
+msgstr[1] ""
+"Los %d elementos seleccionados se moverán si selecciona el comando «Pegar»"
 
 #: ../src/file-manager/fm-directory-view.c:5325
 #, c-format
 msgid "The %d selected item will be copied if you select the Paste command"
 msgid_plural ""
 "The %d selected items will be copied if you select the Paste command"
-msgstr[0] "El elemento seleccionado se copiará si selecciona el comando «Pegar»"
-msgstr[1] "Los %d elementos seleccionados se copiarán si selecciona el comando «Pegar»"
+msgstr[0] ""
+"El elemento seleccionado se copiará si selecciona el comando «Pegar»"
+msgstr[1] ""
+"Los %d elementos seleccionados se copiarán si selecciona el comando «Pegar»"
 
 #: ../src/file-manager/fm-directory-view.c:5418
 #: ../src/file-manager/fm-tree-view.c:975
@@ -3604,19 +3607,23 @@ msgstr "Muestra la carpeta que contiene los scripts que aparecen en este menú"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6014
 msgid "Prepare the selected files to be moved with a Paste command"
-msgstr "Prepara los archivos seleccionados para moverlos con un comando «Pegar»"
+msgstr ""
+"Prepara los archivos seleccionados para moverlos con un comando «Pegar»"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6018
 msgid "Prepare the selected files to be copied with a Paste command"
-msgstr "Prepara los archivos seleccionados para copiarse con un comando «Pegar»"
+msgstr ""
+"Prepara los archivos seleccionados para copiarse con un comando «Pegar»"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6022
 msgid "Move or copy files previously selected by a Cut or Copy command"
-msgstr "Mueve o copia archivos previamente seleccionados por un comando «Cortar» o «Copiar»"
+msgstr ""
+"Mueve o copia archivos previamente seleccionados por un comando «Cortar» o "
+"«Copiar»"
 
 #. We make accelerator "" instead of null here to not inherit the stock
 #. accelerator for paste
@@ -3631,7 +3638,9 @@ msgstr "_Pegar en la carpeta"
 msgid ""
 "Move or copy files previously selected by a Cut or Copy command into the "
 "selected folder"
-msgstr "Mueve o copia archivos previamente seleccionados por un comando «Cortar» o «Copiar» dentro de la carpeta seleccionada"
+msgstr ""
+"Mueve o copia archivos previamente seleccionados por un comando «Cortar» o "
+"«Copiar» dentro de la carpeta seleccionada"
 
 # libnautilus-private/nautilus-global-preferences.c:622
 #. label, accelerator
@@ -4759,11 +4768,15 @@ msgstr "Creando ventana de propiedades."
 msgid "Select an icon"
 msgstr "Seleccione un icono"
 
-#: ../src/file-manager/fm-tree-model.c:1210
+#: ../src/file-manager/fm-tree-model.c:1213
+msgid "(No subfolders)"
+msgstr "(Sin subcarpetas)"
+
+#: ../src/file-manager/fm-tree-model.c:1214
 msgid "(Empty)"
 msgstr "(Vacío)"
 
-#: ../src/file-manager/fm-tree-model.c:1210
+#: ../src/file-manager/fm-tree-model.c:1215
 msgid "Loading..."
 msgstr "Cargando..."
 
