Require new eel.
2005-06-08  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require new eel.

	* NEWS:
	Update for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.11.2 are:
+* Fix sort order for size/count/time
+* ctrl+scrollwheel changes zoom, ctrl-= zooms in
+* better handling of cut and paste in notes text view
+* Add smb domain field in connect to server dialog
+* nicer handling of drops from mozilla
+* no properties menu item for desktop context menu
+* shift-f2 renames with the whole name initially selected
+* sort by emblem only looks at user-set emblems
+* scroll to icon when selected and partially visible
+
 Major changes in 2.11.1 are:
 * Use authentication in external connect to server app
 * UI polish
