--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-06-08  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Require new eel.
+
+	* NEWS:
+	Update for release.
+
 2005-06-06  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-tree-model.c: (fm_tree_model_get_value):
