--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2005-06-08  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post release version bump
+
+=== nautilus 2.11.2 ===
+
+2005-06-08  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Require new eel.
 
 	* NEWS:
