--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-08  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 === nautilus 2.11.2 ===
 
 2005-06-07  Martin Willemoes Hansen  <mwh@sysrq.dk>
