Mark two strings for translation.
2005-06-10  Kjartan Maraas  <kmaraas@gnome.org>

	* src/file-manager/fm-directory-view.c:
	(fm_directory_view_confirm_deletion): Mark two strings for translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-10  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* src/file-manager/fm-directory-view.c:
+	(fm_directory_view_confirm_deletion): Mark two strings for translation.
+
 2005-06-10  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c: (convert_lines_to_str_list):
