--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-11  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2005-06-10  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
