--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-11  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* libnautilus-private/nautilus-emblem-utils.c:
+	(nautilus_emblem_install_custom_emblem): Free the path.
+	From HEAD. Closes bug #307138.
+
 2005-06-10  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c: (convert_lines_to_str_list):
