--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-11  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-directory-view.c:
+	(fm_directory_view_handle_uri_list_drop):
+	Don't try to start a file operation if there are no real uris
+	left after sanitizing the list. Fixes #306246.
+
 2005-06-11  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libnautilus-private/nautilus-emblem-utils.c:
