--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-12  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Update Norwegian bokmål translation.
+	* no.po: Same
+
 2005-06-12  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
